create some page, but not Signup function

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
-<% provide(:title, "Home") %>
-<h1>home#index</h1>
-<p>このページはテストです。</p>
+<div class="center jumbotron">
+  <h1>PPO -Planning Poker Online-</h1>
+
+  <h2>
+    おや、ご新規さんみたいだな。<br>
+    まずはアカウントを作成してくれ。
+  </h2>
+
+  <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
