--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,5 +6,5 @@
     まずはアカウントを作成してくれ。
   </h2>
 
-  <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "新規登録", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
