add advanced login

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'About') %>
-<h1>About</h1>
+<% provide(:title, 'PPOとは') %>
+<h1>PPOとは</h1>
 <p>
   「PPO -Planning Poker Online-」は福嶋の暇つぶしで開発された戦略トレーディングカードゲームだ。<br>
   世界中のエンジニア達と見積もりを通して戦うことができるぞ。<br>
