--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Contact') %>
-<h1>Contact</h1>
+<% provide(:title, 'コンタクト') %>
+<h1>コンタクト</h1>
 <p>
   基本的に開発者の福嶋とは何のコンタクトも取れないぞ！ <br>
   あいつはこのサービスに対して一切の責任を負わないからな。
