--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Help') %>
-<h1>Help</h1>
+<% provide(:title, 'ヘルプ') %>
+<h1>ヘルプ</h1>
 <p>
   このサービスについて何かお困りかい？<br>
   そこまで複雑なサービスじゃないはずだから、問題は自力で解決してくれ。<br>
