--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,7 @@
   <nav>
     <ul>
       <li><%= link_to "PPOとは",   '/about' %></li>
+      <li><%= link_to "ヘルプ", '/help' %></li>
       <li><%= link_to "コンタクト", '/contact' %></li>
     </ul>
   </nav>
