--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,14 +3,13 @@
     <%= link_to "Planning Poker Online", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "ヘルプ", '/help' %></li>
         <% if logged_in? %>
-          <li><%= link_to "ユーザー一覧", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              アカウント <b class="caret"></b>
+              <i class="fa fa-bars"></i>
             </a>
             <ul class="dropdown-menu">
+              <li><%= link_to "ユーザー一覧", users_path %></li>
               <li><%= link_to "プロフィール", current_user %></li>
               <li><%= link_to "編集", edit_user_path(current_user) %></li>
               <li class="divider"></li>
