--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,5 +7,18 @@
       <%= @user.name %>
       </h1>
     </section>
+    <section class="micropost_form">
+      <%= render 'shared/micropost_form' %>
+    </section>
   </aside>
+
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>コメント一覧 (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
+  </div>
 </div>
