--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -189,6 +189,17 @@ input {
   }
 }
 
+.btn {
+  background-color: #438B21;
+  border: none;
+  &:hover {
+    background-color: #367319;
+  }
+  &:active {
+    background-color: #367319 !important;
+  }
+}
+
 // 新規登録ボタンの色を変えるためのやつ
 .btn-primary:visited {
   color: white !important;
@@ -206,6 +217,10 @@ input {
 #session_remember_me {
   width: auto;
   margin-left: 0;
+}
+
+.micropost_form {
+  margin-top: 0;
 }
 
 
@@ -232,12 +247,15 @@ input {
     border-top: 1px solid #e8e8e8;
   }
   .user {
+    font-size: 1.1em;
+    font-weight: bold;
     margin-top: 5em;
     padding-top: 0;
   }
   .content {
     display: block;
-    margin-left: 60px;
+    font-size: 1.2em;
+    margin: 5px 0 30px 60px;
     img {
       display: block;
       padding: 5px 0;
@@ -245,8 +263,11 @@ input {
   }
   .timestamp {
     color: $gray-light;
-    display: block;
-    margin-left: 60px;
+    margin-left: 7px;
+    margin-right: 50px;
+  }
+  .delete {
+    color: $gray-light;
   }
   .gravatar {
     float: left;
@@ -266,5 +287,19 @@ span.picture {
   margin-top: 10px;
   input {
     border: 0;
+  }
+}
+
+
+/* ----- rooms ----- */
+
+.room {
+  border: 1px solid #cccccc;
+  background-color: #f5f5f5;
+  padding: 10px 30px;
+  height: 70px;
+  .room_name {
+    font-size: 2em;
+    margin-top: 15px;
   }
 }
