--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,9 @@
               <i class="fa fa-bars"></i>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "ユーザー一覧", users_path %></li>
+              <li><%= link_to "見積もり部屋", rooms_path %></li>
               <li><%= link_to "プロフィール", current_user %></li>
+              <li><%= link_to "ユーザー一覧", users_path %></li>
               <li><%= link_to "編集", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
