--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,6 +26,10 @@ textarea {
   resize: vertical;
 }
 
+.container {
+  // width: 70%;
+}
+
 .center {
   text-align: center;
   h1 {
@@ -303,8 +307,14 @@ span.picture {
   background-color: #f5f5f5;
   padding: 10px 30px;
   height: 70px;
+
   .room_name {
     font-size: 2em;
     margin-top: 5px;
+  }
+
+  .delete_room {
+    float: right;
+    display: inline;
   }
 }
