--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -27,8 +27,9 @@ a {
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #000;
+    background-color: #ddd;
+    text-decoration: none;
   }
 }
 
