--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,7 +3,7 @@
     <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
     <span class="timestamp">だいたい<%= time_ago_in_words(micropost.created_at) %>前</span>
     <% if current_user?(micropost.user) %>
-      <%= link_to "削除", micropost, method: :delete, class: "delete", data: {confirm: "コメントを削除するぞ。"} %>
+      <%= link_to "削除", micropost, method: :delete, class: :delete, data: {confirm: "コメントを削除するぞ。"} %>
     <% end %>
     <span class="content"><%= micropost.content %></span>
 </li>
