--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 
   <div class="col-md-8">
     <% if @user.microposts.any? %>
-      <h3>つぶやき一覧</h3> <!-- (<%= @user.microposts.count %>) -->
+      <h3>つぶやき一覧</h3>
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
