[bugfix]WebSocketのバグを修正

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="room_form_wrapper">
-      <%= text_area nil, nil, :placeholder => "Shift + Enter で送信", 'data-behavior': 'room_speaker' %>
+      <textarea type="text" placeholder= "Shift + Enter で送信" data-behavior= 'room_speaker'></textarea>
     </div>
   </div>
 </div>
