--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -319,15 +319,18 @@ span.picture {
 }
 
 .room_sidebar {
+  color: #fff;
   border: solid 1px #aaa;
   height: calc(100vh - 100px);
   padding: 20px;
+  background-color: #367319;
   .room_title {
-    text-align: center;
     font-size: 1.5em;
     font-weight: bold;
+    line-height: 1.3;
   }
   .room_about {
+    font-size: 1.1em;
     margin-top: 20px;
   }
 }
@@ -355,19 +358,23 @@ span.picture {
 
 .message_wrapper {
   margin-top: 10px;
+  text-align: right;
   .message_name {
-    margin-bottom: 2px;
+    margin-bottom: 1px;
     font-size: 0.9em;
     font-weight: bold;
   }
   .message_content {
     padding: 5px 15px;
-    width: 60%;
+    max-width: 60%;
+    display: inline-block;
     border-radius: 15px;
-    background-color: #88e35b;
+    background-color: #00ea00;
+    // background-color: #88e35b;
     p {
       color: #111;
       margin-bottom: 0;
+      text-align: left;
     }
   }
 }
