[modify]カードのデザインをいい感じに

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -7,30 +7,39 @@
     </div>
     <div class="cards_wrapper">
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>1</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>2</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>3</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>5</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>8</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>13</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>21</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>40</span>
       </div>
       <div class="card">
+        <%= image_tag('background_card.png') %>
         <span>X</span>
       </div>
     </div>
