--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -341,26 +341,30 @@ span.picture {
 
 .cards_wrapper {
   border: solid 1px #aaa;
-  background-color: #d8e3d3;
+  background-color: #abc2a1;
+  // background-color: #d8e3d3;
   height: 100px;
   width: 100%;
   padding: 5px;
   overflow-x: auto;
   white-space: nowrap;
   .card {
-    margin: 0 3px;
-    padding: 2px;
+    margin: 0 2px;
     width: 80px;
     height: 90px;
-    border: 1px solid black;
-    background-color: #321c4f;
     box-shadow: 3px 3px 3px rgba(0,0,0,0.4);
     display: inline-block;
+    position: relative;
     span {
-      text-align: center;
+      position: absolute;
+      top: 10px;
+      left: 5px;
       font-size: 3em;
-      line-height: 1.1;
       color: #fff;
+    }
+    img {
+      width: 100%;
+      filter: brightness(80%);
     }
   }
 }
