--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,14 +7,16 @@
       <%= @user.name %>
       </h1>
     </section>
-    <section class="micropost_form">
-      <%= render 'shared/micropost_form' %>
-    </section>
+    <% if current_user?(@user) %>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    <% end %>
   </aside>
 
   <div class="col-md-8">
     <% if @user.microposts.any? %>
-      <h3>つぶやき一覧</h3> <!-- (<%= @user.microposts.count %>) -->
+      <h3>つぶやき一覧</h3>
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
