--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -238,8 +238,12 @@ input {
   margin: 0;
   li {
     overflow: auto;
-    padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
+    padding: 10px;
+    border: 1px solid #ddd;
+    font-size: 1.5em;
+    &:hover {
+      background-color: #f7f7f7;
+    }
   }
 }
 
@@ -304,9 +308,13 @@ span.picture {
 
 .room {
   border: 1px solid #cccccc;
-  background-color: #f5f5f5;
+  background-color: #f9f9f9;
   padding: 10px 30px;
   height: 70px;
+
+  &:hover {
+    background-color: #ececec;
+  }
 
   .room_name {
     font-size: 2em;
@@ -325,12 +333,13 @@ span.picture {
 }
 
 .room_sidebar_top {
-  color: #fff;
+  color: #e7f2e1;
   border: solid 1px #aaa;
   height: calc(100vh - 200px);
   padding: 20px;
   background-color: #367319;
   .room_title {
+    color: #f8fff5;
     font-size: 1.5em;
     font-weight: bold;
     line-height: 1.3;
@@ -362,7 +371,7 @@ span.picture {
       top: 10px;
       left: 5px;
       font-size: 3em;
-      color: #fff;
+      color: #fff; // #f6f0fa;
     }
     img {
       width: 100%;
@@ -374,10 +383,10 @@ span.picture {
 .room_main {
   padding: 0;
   .room_message_box {
-    padding: 10px 20px;
+    padding: 10px 20px 150px 20px;
     border: solid 1px #aaa;
     height: calc(100vh - 200px);
-    background-color: #f0f0f0;
+    background-color: #eee;
     overflow: scroll;
   }
   .room_form_wrapper {
@@ -394,7 +403,7 @@ span.picture {
 
 .message_wrapper {
   margin-top: 10px;
-  text-align: right;
+  // text-align: right;
   .message_name {
     margin-bottom: 1px;
     font-size: 0.9em;
@@ -402,15 +411,14 @@ span.picture {
   }
   .message_content {
     padding: 5px 15px;
-    max-width: 60%;
+    max-width: 70%;
     display: inline-block;
     border-radius: 15px;
-    // background-color: #00ea00;
-    background-color: #88e35b;
+    // background-color: #88e35b;
     p {
       color: #111;
       margin-bottom: 0;
-      text-align: left;
+      // text-align: left;
     }
   }
 }
