--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -128,6 +128,12 @@ footer {
 aside {
   section.user_info {
     margin-top: 20px;
+    a {
+      float: right;
+      display: inline;
+      margin-top: -18px;
+      margin-right: 5px;
+    }
   }
   section {
     padding: 10px 0;
@@ -207,7 +213,7 @@ input {
   color: white !important;
 }
 
-.btn-new-room {
+.btn-new-room, .btn-new-issue {
   float: right;
   margin-top: -60px;
 }
@@ -317,8 +323,11 @@ span.picture {
   }
 
   .room_name {
-    font-size: 2em;
+    font-size: 1.9em;
     margin-top: 5px;
+    a:visited {
+      color: #444;
+    }
   }
 
   .room_menu {
@@ -336,24 +345,44 @@ span.picture {
   color: #e7f2e1;
   border: solid 1px #aaa;
   height: calc(100vh - 200px);
-  padding: 20px;
+  padding: 10px;
   background-color: #367319;
   .room_title {
     color: #f8fff5;
     font-size: 1.5em;
     font-weight: bold;
     line-height: 1.3;
+    margin: 10px;
   }
   .room_about {
     font-size: 1.1em;
-    margin-top: 20px;
+    margin: 10px;
+  }
+}
+
+.room_issues {
+  color: #333;
+  background-color: #e7f2e1;
+  padding: 20px 10px 70px 10px;
+  .room_issue_top {
+    font-size: 1.2em;
+  }
+  a {
+    color: #333;
+    float: right;
+    margin-top: -27px;
+    margin-right: 5px;
+  }
+  .room_issue_record {
+    background: #fff;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
   }
 }
 
 .cards_wrapper {
   border: solid 1px #aaa;
   background-color: #abc2a1;
-  // background-color: #d8e3d3;
   height: 100px;
   width: 100%;
   padding: 5px;
@@ -371,11 +400,11 @@ span.picture {
       top: 10px;
       left: 5px;
       font-size: 3em;
-      color: #fff; // #f6f0fa;
+      color: #fff;
     }
     img {
       width: 100%;
-      filter: brightness(80%);
+      filter: brightness(85%);
     }
   }
 }
@@ -420,5 +449,30 @@ span.picture {
       margin-bottom: 0;
       // text-align: left;
     }
+  }
+}
+
+
+/* ----- issue ----- */
+
+.issue {
+  border: 1px solid #cccccc;
+  background-color: #f9f9f9;
+  padding: 10px 30px;
+  height: 70px;
+
+  &:hover {
+    background-color: #ececec;
+  }
+
+  .issue_name {
+    font-size: 2em;
+    margin-top: 5px;
+  }
+
+  .issue_menu {
+    float: right;
+    display: inline;
+    margin-left: 20px;
   }
 }
