--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
       <%= gravatar_for @user, size: 60 %>
       <%= @user.name %>
       </h1>
+      <%= link_to "編集", edit_user_path(current_user) if current_user?(@user) %>
     </section>
     <% if current_user?(@user) %>
       <section class="micropost_form">
@@ -16,7 +17,7 @@
 
   <div class="col-md-8">
     <% if @user.microposts.any? %>
-      <h3>つぶやき一覧</h3>
+      <h3>つぶやき</h3>
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
