--- a/app/views/issues/edit.html.erb
+++ b/app/views/issues/edit.html.erb
@@ -1,12 +1,12 @@
-<% provide(:title, "部屋編集") %>
-<h1>部屋編集</h1>
+<% provide(:title, "issue編集") %>
+<h1>issue編集</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@room) do |f| %>
+    <%= form_for(@issue) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label "部屋名" %>
+      <%= f.label "issue概要" %>
       <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label "説明" %>
