--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -1,18 +1,18 @@
-<% provide(:title, "部屋編集") %>
-<h1>部屋編集</h1>
+<% provide(:title, 'issue作成') %>
+<h1>issue作成</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@room) do |f| %>
+    <%= form_for @issue do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label "部屋名" %>
+      <%= f.label :name, "issue概要" %>
       <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label "説明" %>
+      <%= f.label :about, "説明" %>
       <%= f.text_field :about, class: 'form-control' %>
 
-      <%= f.submit "変更", class: "btn btn-primary" %>
+      <%= f.submit "登録", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
