--- a/app/views/room_issues/edit.html.erb
+++ b/app/views/room_issues/edit.html.erb
@@ -1,13 +1,13 @@
 <% provide(:title, 'Issue | ' + @room.name) %>
 <div class="row">
-  <h1>Issue編集_<%= @room.name %></h1>
+  <h1>Issue | <%= @room.name %></h1>
   <div class="issues">
     <% @issues.each do |issue| %>
-    <div class="issue">
-      <p class="issue_name"><%= link_to issue.name, "#" %><p>
+    <div class="issue <%= "tied_issue" if issue.tied?(@room) %>">
+      <p class="issue_name"><%= issue.name %></p>
       <span class="issue_about"><%= issue.about %></span>
       <% if issue.tied?(@room) %>
-        <%= link_to "部屋から削除", "#", class: "issue_menu delete_issue" %>
+        <%= link_to "部屋から削除", room_issues_destroy_path(room_id: @room.id, issue_id: issue.id), method: :post, class: "issue_menu delete_issue" %>
       <% else %>
         <%= link_to "追加", room_issues_create_path(room_id: @room.id, issue_id: issue.id), method: :post, class: "issue_menu add_issue" %>
       <% end %>
