--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,6 +1,6 @@
 <div class="room">
   <%= gravatar_for(room.created_user, size: 50) %>
-  <p class="room_name"><%= link_to room.name, room_path(room) %><p>
+  <p class="room_name"><%= link_to room.name, room_path(room) %></p>
   <span class="room_about"><%= room.about %></span>
   <% if current_user?(room.created_user) %>
     <%= link_to "削除", room, method: :delete, class: "room_menu delete_room", data: {confirm: "部屋を削除するぞ。"} %>
