--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -5,13 +5,15 @@
       <p class="room_title"><%= @room.name %></p>
       <p class="room_about"><%= @room.about %></p>
       <div class="room_issues">
-        <p class="room_issue_top">Issue一覧</p>
+        <p class="room_issues_top">Issue一覧</p>
         <%= link_to "編集", "/rooms/#{@room.id}/room_issues/edit" %>
-        <% @room.issues.order(created_at: :desc).each do |issue| %>
-          <div class="room_issue_record">
-            <%= issue.name %>
-          </div>
-        <% end %>
+        <div class="room_issues_wrapper">
+          <% @room.issues.order(created_at: :desc).each do |issue| %>
+            <div class="room_issue_record">
+              <%= issue.name %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
     <div class="cards_wrapper">
