--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,13 @@
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
-      <%= will_paginate @microposts %>
     <% end %>
   </div>
+  
 </div>
+
+<% if @user.microposts.any? %>
+  <div class="paginate microposts_paginate">
+    <%= paginate @microposts %>
+  </div>
+<% end %>
