チャットルームのスクロールをいい感じにした

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
   <h1>PPO -Planning Poker Online-</h1>
 
   <h2>
-    おや、ご新規さんみたいだな。<br>
-    まずはアカウントを作成してくれ。
+    ご新規さんかい？<br>
+    それならまずはアカウントを作成してくれ。
   </h2>
 
   <%= link_to "新規登録", signup_path, class: "btn btn-lg btn-primary" %>
