--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,6 +1,6 @@
 <li id="micropost-<%= micropost.id %>">
-  <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
-    <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
+  <%= gravatar_for(micropost.user, size: 50) %>
+    <span class="user"><%= micropost.user.name %></span>
     <span class="timestamp">だいたい<%= time_ago_in_words(micropost.created_at) %>前</span>
     <% if current_user?(micropost.user) %>
       <%= link_to "削除", micropost, method: :delete, class: :delete, data: {confirm: "コメントを削除するぞ。"} %>
