--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -53,7 +53,8 @@
       </div>
     </div>
     <div class="room_form_wrapper">
-      <textarea type="text" placeholder= "Shift + Enter で送信" data-behavior= 'room_speaker'></textarea>
+      <textarea id="textarea_message" type="text" placeholder= "Shift + Enter で送信" data-behavior= 'room_speaker'></textarea>
+      <div class="btn btn-lg btn-primary btn-message">送信</div>
     </div>
   </div>
 </div>
