--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -222,6 +222,13 @@ input {
   margin-top: -60px;
 }
 
+.btn-message {
+  display: inline-block;
+  margin-top: -62px;
+  padding: 8px 12px;
+  font-size: 16px;
+}
+
 .checkbox {
   margin-top: -10px;
   margin-bottom: 10px;
@@ -352,7 +359,7 @@ span.picture {
 
 .room_sidebar_top {
   color: #e7f2e1;
-  border: solid 1px #aaa;
+  // border: solid 1px #aaa;
   height: calc(100vh - 190px);
   padding: 10px;
   background-color: #367319;
@@ -401,7 +408,7 @@ span.picture {
 }
 
 .cards_wrapper {
-  border: solid 1px #aaa;
+  // border: solid 1px #aaa;
   background-color: #abc2a1;
   height: 100px;
   width: 100%;
@@ -437,19 +444,26 @@ span.picture {
   padding: 0;
   .room_message_box {
     padding: 10px 20px 50px 20px;
-    border: solid 1px #aaa;
+    // border: solid 1px #aaa;
     height: calc(100vh - 190px);
     background-color: #eee;
     overflow: scroll;
-    box-shadow: 3px 3px 6px rgba(0,0,0,0.3) inset;
+    box-shadow: 3px 3px 6px 1px rgba(0,0,0,0.3) inset;
   }
   .room_form_wrapper {
+    padding: 5px 0 0 5px;
+    height: 100px;
+    width: 100%;
     textarea {
       resize: none;
       padding: 5px;
-      height: 100px;
+      height: 95px;
+      width: calc(100% - 63px);
       font-size: 1.1em;
       line-height: 1.4;
+      border: solid 2px #888;
+      border-radius: 5px;
+      display: inline-block;
     }
   }
 }
@@ -533,9 +547,18 @@ span.picture {
 .paginate {
   text-align: center;
   .pagination {
-    margin-top: 30px;
+    margin-top: 40px;
     margin-bottom: 0;
   }
+}
+
+.pagination_message {
+  text-align: left;
+  margin-top: 40px;
+  padding-left: 15px;
+  font-size: 16px;
+  font-style: oblique;
+  line-height: 1.5;
 }
 
 .page {
@@ -601,4 +624,15 @@ span.picture {
     margin: 10px 20px;
     color: #4285f4;
   }
+}
+
+
+/* ----- レスポンシブ ----- */
+
+@media screen and (max-width: 480px) {
+  body {
+    margin: 10px;
+  }
+
+
 }
