--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'PPOとは') %>
 <h1>PPOとは</h1>
-<p>
+<p class="about_text">
   「PPO -Planning Poker Online-」は福嶋の暇つぶしで開発された戦略トレーディングカードゲームだ。<br>
   世界中のエンジニア達と見積もりを通して戦うことができるぞ。<br>
   妥当なポイントを提示して手堅く見積もったり、あえて挑戦的なポイントを出してライバルをビビらせたり、使い方はアンタ次第だ。
