--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'コンタクト') %>
 <h1>コンタクト</h1>
-<p>
+<p class="contact_text">
   基本的に開発者の福嶋とは何のコンタクトも取れないぞ！ <br>
   あいつはこのサービスに対して一切の責任を負わないからな。
 </p>
