--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'ヘルプ') %>
 <h1>ヘルプ</h1>
-<p>
+<p class="help_text">
   このサービスについて何かお困りかい？<br>
   そこまで複雑なサービスじゃないはずだから、問題は自力で解決してくれ。<br>
   まあ、恨むなら開発者の福嶋を恨むんだな。
