pointの編集できるようにした

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -412,12 +412,23 @@ span.picture {
   .room_issue_record {
     background: #fff;
     border: 1px solid #ccc;
-    padding: 7px 10px;
+    padding: 4px 7px;
+    height: 32px;
     overflow: hidden;
     p {
+      display: inline;
       overflow: hidden;
       text-overflow: ellipsis;
-      margin: 0;
+    }
+    .issue_point {
+      display: inline-block;
+      text-align: center;
+      color: #fff;
+      background-color: #367319;
+      padding: 2px 0;
+      width: 22px;
+      border-radius: 11px;
+      font-size: 14px;
     }
   }
 }
@@ -526,10 +537,10 @@ span.picture {
     background-color: #367319;
     margin-top: -11px;
     margin-left: -26px;
-    padding: 2px;
-    min-width: 22px;
-    border-radius: 11px;
-    font-size: 16px;
+    padding: 3px 0;
+    width: 24px;
+    border-radius: 12px;
+    font-size: 15px;
   }
 
   .issue_name {
@@ -573,6 +584,10 @@ span.picture {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+}
+
+#issue_point {
+  height: 32px;
 }
 
 
