戻るボタンYoutubeパクった

--- a/app/views/issues/edit.html.erb
+++ b/app/views/issues/edit.html.erb
@@ -1,4 +1,9 @@
 <% provide(:title, "issue編集") %>
+<div class="return return_edit_issue">
+  <%= link_to @return_url do %>
+    <i class="fab fa-youtube fa-4x fa-flip-horizontal"></i>
+  <% end %>
+</div>
 <h1>issue編集</h1>
 
 <div class="row">
