--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,9 @@
 <% provide(:title, "ユーザー編集") %>
+<div class="return">
+  <%= link_to @user do %>
+    <i class="fab fa-youtube fa-4x fa-flip-horizontal"></i>
+  <% end %>
+</div>
 <h1>ユーザー編集</h1>
 
 <div class="row">
