--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -374,16 +374,15 @@ span.picture {
 
 .room_sidebar_top {
   color: #e7f2e1;
-  // border: solid 1px #aaa;
   height: calc(100vh - 190px);
-  padding: 10px;
+  padding: 5px 10px;
   background-color: #367319;
   .room_title {
     color: #f8fff5;
     font-size: 1.5em;
     font-weight: bold;
     line-height: 1.3;
-    margin: 10px;
+    margin: 0 10px;
   }
   .room_about {
     font-size: 1.1em;
@@ -673,4 +672,38 @@ span.picture {
     margin: 10px 20px;
     color: #4285f4;
   }
+}
+
+
+/* ----- return ----- */
+
+.return {
+  float: left;
+  margin: 16px -80px 0 7px;
+  i {
+    color: #28a745;
+    transition: all 0.2s ease-out;
+    &:hover {
+      color: #367319;
+    }
+    &:active {
+      color: #367319;
+    }
+  }
+}
+
+.return_rooms {
+  a {
+    color: #e7f2e1;
+    transition: all 0.2s ease-out;
+    &:hover {
+      color: #c4d9b8;
+      background-color: #1e450c;
+    }
+  }
+}
+
+// room_issuesからの遷移で微妙にボタンの位置がずれるので修正
+.return_edit_issue {
+  margin-left: -8px;
 }
