--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -1,4 +1,9 @@
 <% provide(:title, 'issue作成') %>
+<div class="return">
+  <%= link_to @return_url do %>
+    <i class="fab fa-youtube fa-4x fa-flip-horizontal"></i>
+  <% end %>
+</div>
 <h1>issue作成</h1>
 
 <div class="row">
