--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,4 +1,9 @@
 <% provide(:title, "部屋編集") %>
+<div class="return">
+  <%= link_to rooms_path do %>
+    <i class="fab fa-youtube fa-4x fa-flip-horizontal"></i>
+  <% end %>
+</div>
 <h1>部屋編集</h1>
 
 <div class="row">
