--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -2,6 +2,11 @@
 <div class="row">
   <aside class="room_sidebar col-md-4">
     <div class="room_sidebar_top">
+      <div class="return_rooms">
+        <%= link_to rooms_path do %>
+          <i class="fab fa-youtube fa-2x fa-flip-horizontal"></i>
+        <% end %>
+      </div>
       <p class="room_title"><%= @room.name %></p>
       <p class="room_about"><%= @room.about %></p>
       <div class="room_issues">
