--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -317,9 +317,20 @@ input {
 }
 
 aside {
+  border-radius: 3px;
+  box-shadow: 2px 2px 3px 3px rgba(0,0,0,0.1);
+  padding-bottom: 15px;
+  .aside_user_name {
+    margin-bottom: 7px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .edit_user_link {
+    margin-bottom: 7px;
+  }
   textarea {
     height: 100px;
-    margin-bottom: 5px;
+    margin-bottom: 0;
     resize: none;
   }
 }
@@ -329,6 +340,10 @@ span.picture {
   input {
     border: 0;
   }
+}
+
+.micropost-wrapper {
+  padding: 0 30px;
 }
 
 
@@ -575,7 +590,7 @@ span.picture {
 }
 
 .room_issue_top {
-  max-width: 90%;
+  max-width: calc(100% - 140px);
   margin: 0 auto;
   overflow: hidden;
   h1 {
