--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,6 +14,9 @@
       <%= f.label "アカウント名" %>
       <%= f.text_field :name, class: 'form-control' %>
 
+      <%= f.label "自己紹介" %>
+      <%= f.text_field :about, class: 'form-control' %>
+
       <%= f.label "メールアドレス" %>
       <%= f.email_field :email, class: 'form-control' %>
 
