--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,10 @@
     <section class="user_info">
       <h1>
       <%= gravatar_for @user, size: 60 %>
-      <%= @user.name %>
+      <span class="aside_user_name"><%= @user.name %></span>
       </h1>
-      <%= link_to "編集", edit_user_path(current_user) if current_user?(@user) %>
+      <span class="edit_user_link"><%= link_to "編集", edit_user_path(current_user) if current_user?(@user) %></span>
+      <%= @user.about %>
     </section>
     <% if current_user?(@user) %>
       <section class="micropost_form">
@@ -15,7 +16,7 @@
     <% end %>
   </aside>
 
-  <div class="col-md-8">
+  <div class="col-md-8 micropost-wrapper">
     <h3>つぶやき</h3>
     <% if @user.microposts.any? %>
       <ol class="microposts">
